// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cmfConnect Higher Order Component should not remove the component state when unmount and cmfConnect keepComponentState is true 1`] = `
{
  "cmf": {
    "componentState": {
      "componentName": "TestComponent",
      "initialComponentState": Immutable.Map {},
      "key": "default",
      "type": "REACT_CMF.COMPONENT_ADD_STATE",
    },
  },
  "id": "default",
  "type": "TestComponent.initState",
}
`;

exports[`cmfConnect Higher Order Component should not remove the component state when unmount and props keepComponentState is true 1`] = `
{
  "cmf": {
    "componentState": {
      "componentName": "TestComponent",
      "initialComponentState": Immutable.Map {},
      "key": "default",
      "type": "REACT_CMF.COMPONENT_ADD_STATE",
    },
  },
  "id": "default",
  "type": "TestComponent.initState",
}
`;

exports[`cmfConnect Higher Order Component should remove the component state when unmount 1`] = `
{
  "cmf": {
    "componentState": {
      "componentName": "TestComponent",
      "initialComponentState": Immutable.Map {},
      "key": "default",
      "type": "REACT_CMF.COMPONENT_ADD_STATE",
    },
  },
  "id": "default",
  "type": "TestComponent.initState",
}
`;

exports[`cmfConnect Higher Order Component should remove the component state when unmount 2`] = `
{
  "cmf": {
    "componentState": {
      "componentName": "TestComponent",
      "key": "default",
      "type": "REACT_CMF.COMPONENT_REMOVE_STATE",
    },
  },
  "id": "default",
  "type": "TestComponent.deleteState",
}
`;

exports[`cmfConnect Higher Order Component should remove the component state when unmount and props keepComponentState is false 1`] = `
{
  "cmf": {
    "componentState": {
      "componentName": "TestComponent",
      "initialComponentState": Immutable.Map {},
      "key": "default",
      "type": "REACT_CMF.COMPONENT_ADD_STATE",
    },
  },
  "id": "default",
  "type": "TestComponent.initState",
}
`;

exports[`cmfConnect Higher Order Component should remove the component state when unmount and props keepComponentState is false 2`] = `
{
  "cmf": {
    "componentState": {
      "componentName": "TestComponent",
      "key": "default",
      "type": "REACT_CMF.COMPONENT_REMOVE_STATE",
    },
  },
  "id": "default",
  "type": "TestComponent.deleteState",
}
`;
